@@ -7,5 +7,6 @@
 			<accessrule kind="accessible" pattern="extensions/console/**"/>
 		</accessrules>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/dsadinoff/java-readline-0.8.0/libreadline-java.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
