@@ -1,0 +1,4 @@
+#Sun May 21 01:29:34 IDT 2006
+eclipse.preferences.version=1
+encoding//src/core/com/sadinoff/genj/console/resources.properties=UTF-8
+encoding//src/core/com/sadinoff/genj/console/resources_iw.properties=UTF-8
