@@ -76,11 +76,17 @@ gsib.error.cant-find-myself=Aiee: can't find myself.
 yesno.yes=y
 error.cant-parse-arg-as-number=couldn't parse 
 gsib.help=go to next [Nth] sibling
-gkid.help=go to first [Nth] child 
-gkid.arg=N
+
+gkid.help=go to first [Nth] child, or if it's non-numeric, go to the child named FNAME. 
+gkid.arg=N/FNAME
 gkid.error.no-kids=no kids!
 gkid.error.bad-sib-number=bad sib number
 gkid.error.cant-parse-arg=couldn't parse [
+gkid.error.two-or-more-kids-named = ERROR: There are two or more kids named {0}
+gkid.error.no-kid-named = ERROR: There are no children named {0}
+
+
+
 cbro.help=Create a biological brother [with first name FNAME]
 cson.help=Create son in default/[nth] marriage, with first name FNAME
 cdau.help=Create daughter in default/[nth] marriage, with first name FNAME
@@ -105,7 +111,7 @@ dday.help=set death day to DDAY
 dday.arg=DDAY
 you-are-at=You are at: 
 error.syntax-error=syntax error.  Type 'help' for help
-error.unknown-command=error.unknown-command
+error.unknown-command = ERROR: Unknown command '{0}'
 error.exception=ERROR: 
 error.configerr=Configuration ERROR!  overlapping command definitions for 
 dump.husband=h:
@@ -181,6 +187,7 @@ del.command.2 = delete
 sname.command.1 = sname
 sname.command.2 = snam
 sname.command.3 = sn
+sname.command.3 = n
 
 #set first name
 sfnm.command.1 = sfnm
@@ -202,7 +209,7 @@ bday.command.3 = b
 
 dday.command.1 = dday
 dday.command.2 = sdday
-dday.command.3. = d
+dday.command.3 = d
 
 
 
